--- a/public/assets/css/admin/main.css
+++ b/public/assets/css/admin/main.css
@@ -12,6 +12,9 @@ div.maincontent {
   box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
   moz-box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
 }
+a {
+  cursor: pointer;
+}
 .navbar {
   z-index: 999;
   position: relative;
@@ -31,4 +34,23 @@ fieldset div.wrapper {
 fieldset div.wrapper .collumn {
   float: left;
   margin: 0px 75px;
+}
+.tree {
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px 4px 4px 4px;
+  -moz-border-radius: 4px 4px 4px 4px;
+  -webkit-border-radius: 4px 4px 4px 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
+  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
+}
+.tree li {
+  margin-top: 10px;
+  display: block;
+}
+.tree li .btn-group {
+  float: right;
 }
