[link-products] Set as leaf

--- a/app/less/admin/main.less
+++ b/app/less/admin/main.less
@@ -80,4 +80,16 @@ fieldset{
     }
 }
 
+form .controls
+{
+    //label{
+    //    display: inline;
+    //}
+//
+    //input[type=radio]{
+    //    display: inline;
+    //    margin-top: 0px;
+    //}
+}
+
 
