--- a/app/less/admin/main.less
+++ b/app/less/admin/main.less
@@ -80,16 +80,33 @@ fieldset{
     }
 }
 
-form .controls
-{
-    //label{
-    //    display: inline;
-    //}
-//
-    //input[type=radio]{
-    //    display: inline;
-    //    margin-top: 0px;
-    //}
+input.error{
+    color: #b94a48;
+    border-color: #b94a48;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+    -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+
+    &:focus{
+        border-color: #953b39;
+        -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 6px #d59392;
+        -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 6px #d59392;
+        box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 6px #d59392;
+    }
 }
 
+.btn-marginless
+{
+    margin-bottom: 0px;
+}
 
+td input{
+    margin-bottom: 0px !important;
+}
+
+span.padding-as-input{
+    color: #000;
+    padding: 4px 6px;
+    display: inline-block;
+    opacity: 0.5;
+}
