--- a/public/assets/css/admin/main.css
+++ b/public/assets/css/admin/main.css
@@ -54,3 +54,28 @@ fieldset div.wrapper .collumn {
 .tree li .btn-group {
   float: right;
 }
+input.error {
+  color: #b94a48;
+  border-color: #b94a48;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+}
+input.error:focus {
+  border-color: #953b39;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 6px #d59392;
+  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 6px #d59392;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 6px #d59392;
+}
+.btn-marginless {
+  margin-bottom: 0px;
+}
+td input {
+  margin-bottom: 0px !important;
+}
+span.padding-as-input {
+  color: #000;
+  padding: 4px 6px;
+  display: inline-block;
+  opacity: 0.5;
+}
