--- a/app/less/admin/main.less
+++ b/app/less/admin/main.less
@@ -80,7 +80,7 @@ fieldset{
     }
 }
 
-input.error{
+input.error, select.error{
     color: #b94a48;
     border-color: #b94a48;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
@@ -100,7 +100,7 @@ input.error{
     margin-bottom: 0px;
 }
 
-td input{
+td input, td select{
     margin-bottom: 0px !important;
 }
 
