--- a/app/less/admin/main.less
+++ b/app/less/admin/main.less
@@ -70,14 +70,40 @@ fieldset{
     .border-radius(4px);
     .box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.05));
 
+    a:hover{
+        text-decoration: none;
+    }
+
+    ul{
+        padding-left: 10px;
+        margin-left: 6px;
+        border-left: dotted 1px #999;
+    }
+
+    ul[class^=roots]{
+        padding-left: 0px;
+        margin-left: 0px;
+        border-left: none;
+    }
+
     li{
-        margin-top: 10px;
+        margin-top: 5px;
         display:block;
 
         .btn-group{
             float: right;
         }
     }
+
+    div.line{
+        width: 100%;
+        border-radius: 3px;
+        padding: 5px;
+
+        &:hover{
+            background-color: #E7E7E7;
+        }
+    };
 }
 
 input.error, select.error{
@@ -109,4 +135,15 @@ span.padding-as-input{
     padding: 4px 6px;
     display: inline-block;
     opacity: 0.5;
+}
+
+// The style bellow is regarding the tree list.
+li[collapsed="true"] a .icon-chevron-right
+{
+    background-position: -456px -72px !important; //closed
+}
+
+li[collapsed="false"] a .icon-chevron-right
+{
+    background-position: -313px -119px; //oppened
 }
