--- a/app/less/admin/main.less
+++ b/app/less/admin/main.less
@@ -74,6 +74,10 @@ fieldset{
         text-decoration: none;
     }
 
+    .not-important{
+        opacity: 0.3;
+    }
+
     ul{
         padding-left: 10px;
         margin-left: 6px;
