--- a/app/less/website/main.less
+++ b/app/less/website/main.less
@@ -203,12 +203,17 @@ div.sidebar{
             .image-replacement;
         }
 
+        li{
+            position: relative;
+        }
+
         ul{
             list-style-type: none;
             padding: 0px;
             margin-bottom: 0px;
 
-            li{
+            a{
+                display: block;
                 background: url("@{layout-url}/sidemenu_bullet.png") no-repeat 168px 3px;
                 background-size: 12px;
                 background-color: #465f31;
@@ -231,6 +236,45 @@ div.sidebar{
                 };
             }
         }
+
+        ul.roots li ul{
+            background-color: #FFF;
+            border: dashed 1px #c3ed63;
+            position: absolute;
+            display: none;
+            left: 182px;
+            top: 0px;
+            box-shadow: 1px 1px 10px rgba(0,0,0,0.5);
+            z-index: 999;
+
+            a{
+                background-color: transparent;
+                background-image: none;
+                color: #465f31;
+
+                &:hover{ color: #c3ed63; };
+            }
+
+            ul{
+                display: none;
+                position: relative !important;
+                left: 20px;
+                background-color: #c3ed63;
+                min-height: 25px;
+                box-shadow: inset 1px 1px 10px rgba(0,0,0,0.5);
+
+                a{
+                    color: #000;
+
+                    &:hover{ color: #465f31; };
+                }
+            }
+        }
+
+        //ul.roots li:hover > ul{
+        //    position: absolute;
+        //    display: block;
+        //}
     }
 }
 
