[search-for-category-combobox] Use chosen plugin in category selection for product importing

--- a/app/less/admin/main.less
+++ b/app/less/admin/main.less
@@ -151,3 +151,10 @@ li[collapsed="false"] a .icon-chevron-right
 {
     background-position: -313px -119px; //oppened
 }
+
+// The style bellow is regarding chosen
+
+select[data-chosen]
+{
+    width:100%;
+}
