--- a/public/assets/css/admin/main.css
+++ b/public/assets/css/admin/main.css
@@ -118,3 +118,19 @@ select[data-chosen] {
 .chzn-container {
   margin-bottom: 10px;
 }
+.popover {
+  width: 415px;
+}
+.popover img {
+  display: inline-block;
+  width: 100px;
+  padding: 10px;
+}
+.popover .popover-content {
+  display: inline-block;
+  vertical-align: top;
+  width: 260px;
+}
+.popover .popover-content p {
+  display: inline-block;
+}
