[product-popover] moving image to popoverview rendered

--- a/app/less/admin/main.less
+++ b/app/less/admin/main.less
@@ -167,18 +167,16 @@ select[data-chosen]
     width: 415px;
 }
 
-.popover img {
+.popover .popover-content {
+    display: inline-block;
+    vertical-align:top;
+}
+
+.popover .popover-content img {
     display: inline-block;
     width: 100px;
     padding: 10px;
 }
-
-.popover .popover-content {
-    display: inline-block;
-    vertical-align:top;
-    width: 260px;
-}
-
-.popover .popover-content p {
+.popover .popover-content .technical-features {
     display: inline-block;
 }
