--- a/public/assets/css/admin/main.css
+++ b/public/assets/css/admin/main.css
@@ -122,6 +122,7 @@ select[data-chosen] {
   width: 415px;
 }
 .popover .popover-content {
+  width: 415px;
   display: inline-block;
   vertical-align: top;
 }
@@ -130,6 +131,6 @@ select[data-chosen] {
   width: 100px;
   padding: 10px;
 }
-.popover .popover-content .attributes {
+.popover .popover-content .technical-features {
   display: inline-block;
 }
