--- a/app/less/admin/image-tagging.less
+++ b/app/less/admin/image-tagging.less
@@ -21,6 +21,7 @@
             opacity: 0.4;
 
             &:hover{
+                background-color: rgba(255,255,255,0.2);
                 opacity: 0.8;
             }
         }
