[image-tagging] Actually tag an product in a Image content

--- a/app/less/admin/image-tagging.less
+++ b/app/less/admin/image-tagging.less
@@ -1,6 +1,7 @@
 .tagged-image{
     display: inline-block;
     position: relative;
+    overflow: hidden;
 
     .tag{
         display: none;
@@ -25,5 +26,13 @@
                 opacity: 0.8;
             }
         }
+    }
+}
+
+.image-tagging{
+    position: relative;
+
+    .image-tag-form{
+        width: 387px;
     }
 }
