--- a/app/views/templates/base/css/main.less
+++ b/app/views/templates/base/css/main.less
@@ -3,7 +3,7 @@
 **/
 
 // Variables
-@layout-url: "../../img/layout";
+@layout-url: "../../../img/templates/base";
 
 // Hides the text within element
 .image-replacement{
@@ -55,7 +55,7 @@ div.topbar{
     line-height: 31px;
     color: #7b824b;
     font-size: 11px;
-    
+
     a{
         opacity: 0.8;
 
@@ -321,7 +321,7 @@ div.main{
             &:hover{
                 opacity: 0.7;
             }
-            
+
             &:first-child{
                 .border-radius(4px, 0px, 0px, 4px);
             }
