--- a/public/assets/css/templates/responsive/breadcrumb.css
+++ b/public/assets/css/templates/responsive/breadcrumb.css
@@ -1,4 +1,3 @@
-/* This module is used to breadcumb styles */
 .breadcrumb {
   list-style: none;
   padding: 0;
@@ -6,9 +5,9 @@
   padding-bottom: 2%;
   border-bottom: 1px solid #EEE;
 }
-
-.breadcrumb li { display: inline-block; }
-
+.breadcrumb li {
+  display: inline-block;
+}
 .breadcrumb li a {
   text-decoration: none;
   color: #FF5F00;
