--- a/public/assets/css/templates/responsive/login_form.css
+++ b/public/assets/css/templates/responsive/login_form.css
@@ -1,4 +1,3 @@
-/* is used at login form */
 form.form-signin {
   max-width: 300px;
   padding: 19px 29px 29px;
@@ -8,13 +7,13 @@ form.form-signin {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-  box-shadow: 0 1px 2px rgba(0,0,0,.05);
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+  -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+  box-shadow: 0 1px 2px rgba(0,0,0,0.05);
 }
-
-form.form-signin input[type='password'], input[type="text"] {
-   width: 90%;
+form.form-signin input[type='password'],
+input[type="text"] {
+  width: 90%;
   display: block;
   font-size: 16px;
   height: auto;
@@ -22,15 +21,13 @@ form.form-signin input[type='password'], input[type="text"] {
   padding: 7px 9px;
   background-color: #FFFFFF;
   border: 1px solid #CCCCCC;
-  
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
   -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
   -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
   -o-transition: border linear 0.2s, box-shadow linear 0.2s;
   transition: border linear 0.2s, box-shadow linear 0.2s;
-  
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
