--- a/app/views/templates/responsive/assets/css/family.css
+++ b/app/views/templates/responsive/assets/css/family.css
@@ -6,13 +6,13 @@
   margin: 0.9375%;
   padding: 2%;
   border: 1px solid #CCC;
-  -webkit-border-radius:  4px; 
-  -moz-border-radius:  4px; 
-  border-radius:  4px; 
+  -webkit-border-radius:  4px;
+  -moz-border-radius:  4px;
+  border-radius:  4px;
 }
 
-.family .photo {
-  width: 50%;
+.family .photo img{
+  width: 100%;
   display: inline-block;
   padding-top: 1.4%;
 }
@@ -37,9 +37,9 @@
     margin-left: 0;
     margin-right: 0;
   }
-  
-  .family .photo {
-    width: 100%;
+
+  .family .photo img {
+    width: 50%;
   }
 
   .family .description {
@@ -48,8 +48,8 @@
 }
 
 @media screen and (min-width:455px) and (max-width: 697px) {
- .family .photo {
-    width: 100%;
+ .family .photo img {
+    width: 50%;
   }
 
   .family .description {
