--- a/app/views/templates/responsive/assets/css/old_layout/css/main.less
+++ b/app/views/templates/responsive/assets/css/old_layout/css/main.less
@@ -2,33 +2,15 @@
     Vars and mixins
 **/
 
-// Variables
-@layout-url: "../img";
-
-// Hides the text within element
-.image-replacement{
-    text-indent: -9999px !important;
-}
-
-// Border radius with vendors
-.border-radius (@a, @a, @a, @a) {
-    border-radius: @arguments;
-    -moz-border-radius: @arguments;
-    -webkit-border-radius: @arguments;
-}
-
-.border-radius (@a) {
-    .border-radius(@a,@a,@a,@a);
-}
-
+@import url('variables');
 /**
     Common styling
 **/
 body{
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-    font-size: 13px;
+    .font-size(13);
     background: url("@{layout-url}/bg-body.png") no-repeat scroll center 0 #FEFEFD;
-    margin: 0px;
+    margin: 0;
     color: #707070;
 }
 
@@ -42,80 +24,9 @@ a{
 }
 
 .content{
-    width: 928px;
+    width: 72.5%;
     margin: auto;
     position: relative;
-}
-
-/**
-    Topbar styling
-**/
-div.topbar{
-    height: 33px;
-    line-height: 31px;
-    color: #7b824b;
-    font-size: 11px;
-
-    a{
-        opacity: 0.8;
-
-        &.bullet{
-            margin-left: 18px;
-            padding-left: 10px;
-            background: url("@{layout-url}/bullet_topmenu.gif") no-repeat;
-            background-position: 0px 6px;
-            background-size: 3px;
-
-            &:first-child{
-                margin-left: 0px;
-            }
-        }
-
-        &:hover{
-            opacity: 1;
-            text-decoration: underline;
-        }
-    }
-
-    // Region selection box
-    div.region{
-        display:inline-block;
-        height: 33px;
-        border-left: 1px solid #e3e8cd;
-        background: #e8f0d1;
-        padding: 0px 10px;
-        margin-left: 40px;
-
-        select{
-            height: 23px;
-            color: #ACB597;
-            background-color: #FFF;
-            border: 1px solid #DEDEDE;
-            font: 1em Arial,Helvetica,Verdana,sans-serif;
-            margin-left: 20px;
-            width: 180px;
-        }
-    }
-
-    // Image tabs
-    span.tab{
-        position: absolute;
-        display: block;
-        width: 109px;
-        height: 41px;
-        right: 13px;
-        top: 0px;
-        .image-replacement;
-
-        &.phonesales{
-            background: url("@{layout-url}/tab_televendas.gif") no-repeat;
-        }
-
-        &.findstore{
-            background: url("@{layout-url}/tab_encontreloja.gif") no-repeat;
-            right: 125px;
-        }
-    }
 }
 
 /**
