--- a/public/assets/css/templates/responsive/old_layout/css/main.css
+++ b/public/assets/css/templates/responsive/old_layout/css/main.css
@@ -3,9 +3,9 @@
 }
 body {
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-  font-size: 13px;
+  font-size: 0.8125em;
   background: url("../img/bg-body.png") no-repeat scroll center 0 #FEFEFD;
-  margin: 0px;
+  margin: 0;
   color: #707070;
 }
 a {
@@ -16,65 +16,9 @@ a:hover {
   color: #ff7700;
 }
 .content {
-  width: 928px;
+  width: 72.5%;
   margin: auto;
   position: relative;
-}
-div.topbar {
-  height: 33px;
-  line-height: 31px;
-  color: #7b824b;
-  font-size: 11px;
-}
-div.topbar a {
-  opacity: 0.8;
-}
-div.topbar a.bullet {
-  margin-left: 18px;
-  padding-left: 10px;
-  background: url("../img/bullet_topmenu.gif") no-repeat;
-  background-position: 0px 6px;
-  background-size: 3px;
-}
-div.topbar a.bullet:first-child {
-  margin-left: 0px;
-}
-div.topbar a:hover {
-  opacity: 1;
-  text-decoration: underline;
-}
-div.topbar div.region {
-  display: inline-block;
-  height: 33px;
-  border-left: 1px solid #e3e8cd;
-  background: #e8f0d1;
-  padding: 0px 10px;
-  margin-left: 40px;
-}
-div.topbar div.region select {
-  height: 23px;
-  color: #ACB597;
-  background-color: #FFF;
-  border: 1px solid #DEDEDE;
-  font: 1em Arial, Helvetica, Verdana, sans-serif;
-  margin-left: 20px;
-  width: 180px;
-}
-div.topbar span.tab {
-  position: absolute;
-  display: block;
-  width: 109px;
-  height: 41px;
-  right: 13px;
-  top: 0px;
-  text-indent: -9999px !important;
-}
-div.topbar span.tab.phonesales {
-  background: url("../img/tab_televendas.gif") no-repeat;
-}
-div.topbar span.tab.findstore {
-  background: url("../img/tab_encontreloja.gif") no-repeat;
-  right: 125px;
 }
 h1.logo {
   background: url("../img/logo.png") no-repeat;
