--- a/app/views/templates/responsive/assets/css/old_layout/css/topbar.less
+++ b/app/views/templates/responsive/assets/css/old_layout/css/topbar.less
@@ -5,6 +5,7 @@
 **/
 
 div.topbar{
+    background: #e8f0d1;
     height: 33px;
     line-height: 31px;
     color: #7b824b;
@@ -77,7 +78,9 @@ div.topbar{
         position: absolute;
         top: 0px;
     }
+}
 
+@media screen and (min-width:801px) and (max-width: 950px) {
     div.topbar div.region {
         display:block;
         margin-top: 2px;
@@ -88,9 +91,6 @@ div.topbar{
 @media screen and (min-width:401px) and (max-width: 799px) {
     .content {
         width: 100%;
-    }
-    span.tab {
-        display: none;
     }
 
     div.topbar div.region select {
@@ -118,12 +118,10 @@ div.topbar{
         text-align: center;
     }
 
-.content {
+    .content {
         width: 100%;
     }
-    span.tab {
-        display: none;
-    }
+
 
     div.topbar div.region select {
         display:block;
