[responsive-layout] added responsive layout to categories

--- a/app/views/templates/responsive/assets/css/old_layout/css/common.less
+++ b/app/views/templates/responsive/assets/css/old_layout/css/common.less
@@ -17,7 +17,7 @@ h1.logo{
 
 div.accountbox{
     position: absolute;
-    right: 0px;
+    right: 183px;
     top: 100px;
     width: 260px;
     height: 75px;
@@ -58,74 +58,29 @@ div.accountbox{
 
 
 @media screen and (min-width:800px) and (max-width: 1275px) {
-    span.tab {
-        display: block;
-        position: absolute;
-        top: 0px;
-    }
 
-    div.topbar div.region {
-        display:block;
-        margin-top: 2px;
-        margin-left: 0;
-    }
 }
 
 @media screen and (min-width:401px) and (max-width: 799px) {
-    .content {
-        width: 100%;
+    div.accountbox {
+        right: 0;
     }
 
-    span.tab {
-        display: none;
-    }
-
-    div.topbar div.region select {
-        display:block;
-        margin-left: 38%;
-        text-align: center;
-    }
-
-    div.topbar div.region label {
-        text-align: center;
-        display:block;
-    }
-
-    div.topbar div.region {
-        height: 70px;
-        display:block;
-        margin-left: 0;
+    h1.logo {
+        margin-left: -40px;
+        margin-right: 0;
+        margin-top: 48px;
     }
 }
 
 @media screen and (min-width:200px) and (max-width: 400px) {
-    div.topbar div.region select {
-        display:block;
-        margin-left: 18%;
-        text-align: center;
+    div.accountbox {
+        right: 0;
     }
 
-.content {
-        width: 100%;
-    }
-    span.tab {
-        display: none;
-    }
-
-    div.topbar div.region select {
-        display:block;
-        margin-left: 26%;
-        text-align: center;
-    }
-
-    div.topbar div.region label {
-        text-align: center;
-        display:block;
-    }
-
-    div.topbar div.region {
-        height: 70px;
-        display:block;
-        margin-left: 0;
+    h1.logo {
+        margin-left: -40px;
+        margin-right: 0;
+        margin-top: 48px;
     }
 }
