--- a/app/views/templates/responsive/assets/css/old_layout/css/topbar.less
+++ b/app/views/templates/responsive/assets/css/old_layout/css/topbar.less
@@ -89,6 +89,10 @@ div.topbar{
 }
 
 @media screen and (min-width:401px) and (max-width: 799px) {
+    span.tab {
+        display:none;
+    }
+
     .content {
         width: 100%;
     }
@@ -122,6 +126,9 @@ div.topbar{
         width: 100%;
     }
 
+    span.tab {
+        display:none;
+    }
 
     div.topbar div.region select {
         display:block;
