--- a/public/assets/css/templates/responsive/old_layout/css/topbar.css
+++ b/public/assets/css/templates/responsive/old_layout/css/topbar.css
@@ -72,6 +72,9 @@ div.topbar span.tab.findstore {
   }
 }
 @media screen and (min-width: 401px) and (max-width: 799px) {
+  span.tab {
+    display: none;
+  }
   .content {
     width: 100%;
   }
@@ -98,6 +101,9 @@ div.topbar span.tab.findstore {
   }
   .content {
     width: 100%;
+  }
+  span.tab {
+    display: none;
   }
   div.topbar div.region select {
     display: block;
