--- a/app/views/templates/responsive/assets/css/old_layout/css/main.less
+++ b/app/views/templates/responsive/assets/css/old_layout/css/main.less
@@ -22,115 +22,14 @@ a{
     }
 }
 
-.content{
+.content {
     width: 72.5%;
     margin: auto;
     position: relative;
 }
-
-/**
-    Common
-**/
-
 /**
     Sidebar
 **/
-
-div.sidebar{
-    float: left;
-    width: 210px;
-
-    .side_menu{
-
-        width: 181px;
-        background-color: #576D43;
-        padding: 5px;
-        .border-radius(3px);
-
-        h3{
-            background: url("@{layout-url}/nav_menu_bg.png") no-repeat -430px 4px;
-            width: 154px;
-            height: 14px;
-            overflow: hidden;
-            margin: auto;
-            margin-top: 3px;
-            .image-replacement;
-        }
-
-        li{
-            position: relative;
-        }
-
-        ul{
-            list-style-type: none;
-            padding: 0px;
-            margin-bottom: 0px;
-
-            a{
-                display: block;
-                background: url("@{layout-url}/sidemenu_bullet.png") no-repeat 168px 3px;
-                background-size: 12px;
-                background-color: #465f31;
-                color: #ddff82;
-                margin: 0px;
-                margin-bottom: 3px;
-                font-size: 11px;
-                padding: 2px 4px;
-                width: 174px;
-                .border-radius(3px);
-                cursor: pointer;
-
-                &:hover{
-                    color: #f6ff00;
-                    background-color: #35501E;
-                }
-
-                &:last-child{
-                    margin-bottom: 0px;
-                };
-            }
-        }
-
-        ul.roots li ul{
-            background-color: #FFF;
-            border: dashed 1px #c3ed63;
-            position: absolute;
-            display: none;
-            left: 182px;
-            top: 0px;
-            box-shadow: 1px 1px 10px rgba(0,0,0,0.5);
-            z-index: 999;
-
-            a{
-                background-color: transparent;
-                background-image: none;
-                color: #465f31;
-
-                &:hover{ color: #c3ed63; };
-            }
-
-            ul{
-                display: none;
-                position: relative !important;
-                left: 20px;
-                background-color: #c3ed63;
-                min-height: 25px;
-                box-shadow: inset 1px 1px 10px rgba(0,0,0,0.5);
-
-                a{
-                    color: #000;
-
-                    &:hover{ color: #465f31; };
-                }
-            }
-        }
-
-        //ul.roots li:hover > ul{
-        //    position: absolute;
-        //    display: block;
-        //}
-    }
-}
 
 /**
     Main page content
@@ -138,82 +37,8 @@ div.sidebar{
 
 div.main{
     float: left;
-    width: 696px;
-    min-height: 750px;
+    width: 74%;
     margin-left: 20px;
-
-    ul.horizon_menu{
-        list-style-type: none;
-        padding: 0px;
-        margin: 0px;
-        width: 439px;
-        height: 32px;
-        overflow: hidden; // Clears the float of li itens
-
-        li{
-            background: url("@{layout-url}/orange_button_bg.gif") repeat-x;
-            width: 74px;
-            height: 32px;
-            display: block;
-            float:left;
-            margin-right: 1px;
-            padding: 0px 6px;
-            cursor: pointer;
-
-            span{
-                display: block;
-                background: url("@{layout-url}/horizon_menu/bt_construcao.png") no-repeat center;
-                height: 100%;
-                .image-replacement;
-
-                &.acabamento{ background-image: url("@{layout-url}/horizon_menu/bt_acabamento.png"); }
-                &.bricolagem{ background-image: url("@{layout-url}/horizon_menu/bt_bricolagem.png"); }
-                &.decoracao{ background-image: url("@{layout-url}/horizon_menu/bt_decoracao.png"); }
-                &.jardinagem{ background-image: url("@{layout-url}/horizon_menu/bt_jardinagem.png"); }
-            }
-
-            &:hover{
-                opacity: 0.7;
-            }
-
-            &:first-child{
-                .border-radius(4px, 0px, 0px, 4px);
-            }
-
-            &:last-child{
-                .border-radius(0px, 4px, 4px, 0px);
-            }
-        }
-    }
-
-    div.search_box{
-        background-color: #FFF;
-        border: 1px solid #DEDEDE;
-        float: right;
-        width: 242px;
-        height: 30px;
-        line-height: 29px;
-        .border-radius(3px);
-
-        input{
-            border: none;
-            height: 29px;
-            background-color: transparent;
-            padding: 0px 11px;
-            width: 180px;
-        }
-
-        input[type=submit]{
-            float: right;
-            background: url("@{layout-url}/btn_search.gif") repeat-x;
-            border: none;
-            background-color: transparent;
-            .border-radius(4px);
-            height: 30px;
-            width: 34px;
-            .image-replacement;
-        }
-    }
 }
 
 /**
