--- a/public/assets/css/templates/responsive/old_layout/css/main.css
+++ b/public/assets/css/templates/responsive/old_layout/css/main.css
@@ -19,174 +19,10 @@ a:hover {
   margin: auto;
   position: relative;
 }
-div.sidebar {
-  float: left;
-  width: 210px;
-}
-div.sidebar .side_menu {
-  width: 181px;
-  background-color: #576D43;
-  padding: 5px;
-  border-radius: 3px 3px 3px 3px;
-  -moz-border-radius: 3px 3px 3px 3px;
-  -webkit-border-radius: 3px 3px 3px 3px;
-}
-div.sidebar .side_menu h3 {
-  background: url("../img/nav_menu_bg.png") no-repeat -430px 4px;
-  width: 154px;
-  height: 14px;
-  overflow: hidden;
-  margin: auto;
-  margin-top: 3px;
-  text-indent: -9999px !important;
-}
-div.sidebar .side_menu li {
-  position: relative;
-}
-div.sidebar .side_menu ul {
-  list-style-type: none;
-  padding: 0px;
-  margin-bottom: 0px;
-}
-div.sidebar .side_menu ul a {
-  display: block;
-  background: url("../img/sidemenu_bullet.png") no-repeat 168px 3px;
-  background-size: 12px;
-  background-color: #465f31;
-  color: #ddff82;
-  margin: 0px;
-  margin-bottom: 3px;
-  font-size: 11px;
-  padding: 2px 4px;
-  width: 174px;
-  border-radius: 3px 3px 3px 3px;
-  -moz-border-radius: 3px 3px 3px 3px;
-  -webkit-border-radius: 3px 3px 3px 3px;
-  cursor: pointer;
-}
-div.sidebar .side_menu ul a:hover {
-  color: #f6ff00;
-  background-color: #35501E;
-}
-div.sidebar .side_menu ul a:last-child {
-  margin-bottom: 0px;
-}
-div.sidebar .side_menu ul.roots li ul {
-  background-color: #FFF;
-  border: dashed 1px #c3ed63;
-  position: absolute;
-  display: none;
-  left: 182px;
-  top: 0px;
-  box-shadow: 1px 1px 10px rgba(0,0,0,0.5);
-  z-index: 999;
-}
-div.sidebar .side_menu ul.roots li ul a {
-  background-color: transparent;
-  background-image: none;
-  color: #465f31;
-}
-div.sidebar .side_menu ul.roots li ul a:hover {
-  color: #c3ed63;
-}
-div.sidebar .side_menu ul.roots li ul ul {
-  display: none;
-  position: relative !important;
-  left: 20px;
-  background-color: #c3ed63;
-  min-height: 25px;
-  box-shadow: inset 1px 1px 10px rgba(0,0,0,0.5);
-}
-div.sidebar .side_menu ul.roots li ul ul a {
-  color: #000;
-}
-div.sidebar .side_menu ul.roots li ul ul a:hover {
-  color: #465f31;
-}
 div.main {
   float: left;
-  width: 696px;
-  min-height: 750px;
+  width: 74%;
   margin-left: 20px;
-}
-div.main ul.horizon_menu {
-  list-style-type: none;
-  padding: 0px;
-  margin: 0px;
-  width: 439px;
-  height: 32px;
-  overflow: hidden;
-}
-div.main ul.horizon_menu li {
-  background: url("../img/orange_button_bg.gif") repeat-x;
-  width: 74px;
-  height: 32px;
-  display: block;
-  float: left;
-  margin-right: 1px;
-  padding: 0px 6px;
-  cursor: pointer;
-}
-div.main ul.horizon_menu li span {
-  display: block;
-  background: url("../img/horizon_menu/bt_construcao.png") no-repeat center;
-  height: 100%;
-  text-indent: -9999px !important;
-}
-div.main ul.horizon_menu li span.acabamento {
-  background-image: url("../img/horizon_menu/bt_acabamento.png");
-}
-div.main ul.horizon_menu li span.bricolagem {
-  background-image: url("../img/horizon_menu/bt_bricolagem.png");
-}
-div.main ul.horizon_menu li span.decoracao {
-  background-image: url("../img/horizon_menu/bt_decoracao.png");
-}
-div.main ul.horizon_menu li span.jardinagem {
-  background-image: url("../img/horizon_menu/bt_jardinagem.png");
-}
-div.main ul.horizon_menu li:hover {
-  opacity: 0.7;
-}
-div.main ul.horizon_menu li:first-child {
-  border-radius: 4px 0px 0px 4px;
-  -moz-border-radius: 4px 0px 0px 4px;
-  -webkit-border-radius: 4px 0px 0px 4px;
-}
-div.main ul.horizon_menu li:last-child {
-  border-radius: 0px 4px 4px 0px;
-  -moz-border-radius: 0px 4px 4px 0px;
-  -webkit-border-radius: 0px 4px 4px 0px;
-}
-div.main div.search_box {
-  background-color: #FFF;
-  border: 1px solid #DEDEDE;
-  float: right;
-  width: 242px;
-  height: 30px;
-  line-height: 29px;
-  border-radius: 3px 3px 3px 3px;
-  -moz-border-radius: 3px 3px 3px 3px;
-  -webkit-border-radius: 3px 3px 3px 3px;
-}
-div.main div.search_box input {
-  border: none;
-  height: 29px;
-  background-color: transparent;
-  padding: 0px 11px;
-  width: 180px;
-}
-div.main div.search_box input[type=submit] {
-  float: right;
-  background: url("../img/btn_search.gif") repeat-x;
-  border: none;
-  background-color: transparent;
-  border-radius: 4px 4px 4px 4px;
-  -moz-border-radius: 4px 4px 4px 4px;
-  -webkit-border-radius: 4px 4px 4px 4px;
-  height: 30px;
-  width: 34px;
-  text-indent: -9999px !important;
 }
 .footer {
   font-size: 11px;
