[responsive-layout] changing responsive CSS

--- a/app/views/templates/responsive/assets/css/old_layout/css/common.less
+++ b/app/views/templates/responsive/assets/css/old_layout/css/common.less
@@ -6,7 +6,7 @@ h1.logo{
     display: block;
     width: 222px;
     height: 103px;
-    margin: 15px auto 20px auto;
+    margin: -15px 0 0px 120px;
     .image-replacement;
     cursor: pointer;
 
@@ -18,7 +18,7 @@ h1.logo{
 div.accountbox{
     position: absolute;
     right: 183px;
-    top: 100px;
+    top: 40px;
     width: 260px;
     height: 75px;
     line-height: 33px;
@@ -58,12 +58,21 @@ div.accountbox{
 
 
 @media screen and (min-width:800px) and (max-width: 1275px) {
+    div.accountbox {
+        top: 65px;
+    }
 
+    h1.logo {
+        margin-left: -40px;
+        margin-right: 0;
+        margin-top: 10px;
+    }
 }
 
 @media screen and (min-width:401px) and (max-width: 799px) {
     div.accountbox {
         right: 0;
+        top: 100px;
     }
 
     h1.logo {
@@ -76,6 +85,7 @@ div.accountbox{
 @media screen and (min-width:200px) and (max-width: 400px) {
     div.accountbox {
         right: 0;
+        top: 100px;
     }
 
     h1.logo {
