--- a/public/assets/css/templates/responsive/thumbnail.css
+++ b/public/assets/css/templates/responsive/thumbnail.css
@@ -74,11 +74,8 @@
   }
 }
 @media screen and (min-width: 455px) and (max-width: 697px) {
-  .thumbnails {
-    width: 50%;
-  }
   .thumbnails li {
-    width: 47%;
+    width: 100%;
   }
   .thumbnails li.technique {
     display: inline-block;
@@ -100,7 +97,12 @@
   }
 }
 @media screen and (min-width: 698px) and (max-width: 769px) {
-  .thumbnails li.technique .thumbnail img {
-    width: 36%;
+  .thumbnails li {
+    width: 47.5%;
+  }
+}
+@media screen and (min-width: 770px) and (max-width: 1200px) {
+  .thumbnails li {
+    width: 47.6%;
   }
 }
