[image-tagging] Image tagging style

--- a/app/views/templates/base/assets/css/image-tagging.less
+++ b/app/views/templates/base/assets/css/image-tagging.less
@@ -36,25 +36,29 @@
         top: 50%;
         left: 50%;
         border-radius: 250px;
-        padding: 30px;
+        padding: 25px;
         margin-left: -30px;
         margin-top: -30px;
         cursor: pointer;
-        border: dotted 4px #FFF;
+        border: solid 4px transparent;
         z-index: 999;
+        background: rgba(255,255,255,0.7) url('../../../img/templates/base/plus.png') no-repeat center;
+
 
         .transition(0.3s, all);
-        .scale(1.5,1.5);
+        //.scale(1.5,1.5);
+        .translate(0,20px);
     }
 
     &:hover{
         .tag{
             display: block;
-            opacity: 0.4;
+            opacity: 0.9;
             .scale(1,1);
 
             &:hover{
-                background-color: rgba(255,255,255,0.2);
+                border: solid 4px #FFF;
+                background-color: rgba(255,255,255,0.4);
                 opacity: 0.8;
             }
         }
@@ -73,12 +77,14 @@
 {
     position: absolute;
     opacity: 0;
+    
     background-color: #FFF;
     border: solid 1px #ddd;
     width: 200px;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 4px 25px rgba(0,0,0,0.3);
+    z-index: 999;
 
     .transition(0.5s, opacity);
     .translate(0,-5);
@@ -86,9 +92,5 @@
     &.visible{
         opacity: 1;
         display: block;
-    }
-
-    img{
-        width: 100%;
     }
 }
