--- a/public/assets/css/admin/image-tagging.css
+++ b/public/assets/css/admin/image-tagging.css
@@ -9,25 +9,26 @@
   top: 50%;
   left: 50%;
   border-radius: 250px;
-  padding: 30px;
+  padding: 25px;
   margin-left: -30px;
   margin-top: -30px;
   cursor: pointer;
-  border: dotted 4px #FFF;
+  border: solid 4px transparent;
   z-index: 999;
+  background: rgba(255,255,255,0.7) url('../../img/plus.png') no-repeat center;
   transition: all 0.3s;
   -moz-transition: all 0.3s;
   -webkit-transition: all 0.3s;
   -o-transition: all 0.3s;
-  transform: scale(1.5,1.5);
-  -ms-transform: scale(1.5,1.5);
-  -webkit-transform: scale(1.5,1.5);
-  -o-transform: scale(1.5,1.5);
-  -moz-transform: scale(1.5,1.5);
+  transform: translate(0,20px);
+  -ms-transform: translate(0,20px);
+  -webkit-transform: translate(0,20px);
+  -o-transform: translate(0,20px);
+  -moz-transform: translate(0,20px);
 }
 .tagged-image:hover .tag {
   display: block;
-  opacity: 0.4;
+  opacity: 0.9;
   transform: scale(1,1);
   -ms-transform: scale(1,1);
   -webkit-transform: scale(1,1);
@@ -35,7 +36,8 @@
   -moz-transform: scale(1,1);
 }
 .tagged-image:hover .tag:hover {
-  background-color: rgba(255,255,255,0.2);
+  border: solid 4px #FFF;
+  background-color: rgba(255,255,255,0.4);
   opacity: 0.8;
 }
 .image-tagging {
@@ -53,6 +55,7 @@
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 4px 25px rgba(0,0,0,0.3);
+  z-index: 999;
   transition: opacity 0.5s;
   -moz-transition: opacity 0.5s;
   -webkit-transition: opacity 0.5s;
