[remove_styles] modifying some styles

--- a/app/views/templates/base/assets/css/main.less
+++ b/app/views/templates/base/assets/css/main.less
@@ -27,7 +27,6 @@
 body{
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     font-size: 13px;
-    background: url("@{layout-url}/bg-body.png") no-repeat scroll center 0 #FEFEFD;
     margin: 0px;
     color: #707070;
 }
@@ -55,6 +54,7 @@ div.topbar{
     line-height: 31px;
     color: #7b824b;
     font-size: 11px;
+    background-color: #e8f0d1;
 
     a{
         opacity: 0.8;
@@ -125,10 +125,9 @@ div.topbar{
 h1.logo{
     background: url("@{layout-url}/logo.png") no-repeat;
     background-position: top;
-    display: block;
+    margin: -15px 0 0px 120px;
     width: 222px;
     height: 103px;
-    margin: 15px auto 20px auto;
     .image-replacement;
     cursor: pointer;
 
@@ -136,11 +135,10 @@ h1.logo{
         background-position: bottom;
     };
 }
-
 div.accountbox{
     position: absolute;
-    right: 0px;
-    top: 100px;
+    right: 183px;
+    top: 40px;
     width: 260px;
     height: 75px;
     line-height: 33px;
