--- a/app/views/templates/responsive/assets/css/base.less
+++ b/app/views/templates/responsive/assets/css/base.less
@@ -14,3 +14,29 @@
 @large: ~"only screen and (min-width:@{@large-screen})";
 @landscape: ~"only screen and (orientation: landscape)";
 @portrait: ~"only screen and (orientation: portrait)";
+
+
+@media screen and (min-width:240px) and (max-width: 454px) {
+   div.main  {
+    width: 84% !important;
+  }
+}
+
+
+@media screen and (min-width:455px) and (max-width: 697px) {
+   div.main  {
+    width: 84% !important;
+  }
+}
+
+@media screen and (min-width:698px) and (max-width: 769px) {
+   div.main  {
+    width: 84% !important;
+  }
+}
+
+@media screen and (min-width:770px) and (max-width: 1200px) {
+   div.main  {
+    width: 84% !important;
+  }
+}
