--- a/public/assets/css/templates/base/main.css
+++ b/public/assets/css/templates/base/main.css
@@ -4,7 +4,6 @@
 body {
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   font-size: 13px;
-  background: url("../../../img/templates/base/bg-body.png") no-repeat scroll center 0 #FEFEFD;
   margin: 0px;
   color: #707070;
 }
@@ -25,6 +24,7 @@ div.topbar {
   line-height: 31px;
   color: #7b824b;
   font-size: 11px;
+  background-color: #e8f0d1;
 }
 div.topbar a {
   opacity: 0.8;
@@ -79,10 +79,9 @@ div.topbar span.tab.findstore {
 h1.logo {
   background: url("../../../img/templates/base/logo.png") no-repeat;
   background-position: top;
-  display: block;
+  margin: -15px 0 0px 120px;
   width: 222px;
   height: 103px;
-  margin: 15px auto 20px auto;
   text-indent: -9999px !important;
   cursor: pointer;
 }
@@ -91,8 +90,8 @@ h1.logo:hover {
 }
 div.accountbox {
   position: absolute;
-  right: 0px;
-  top: 100px;
+  right: 183px;
+  top: 40px;
   width: 260px;
   height: 75px;
   line-height: 33px;
