--- a/app/views/templates/responsive/assets/css/family.css
+++ b/app/views/templates/responsive/assets/css/family.css
@@ -47,4 +47,14 @@
   .family .description {
     width: 100%;
   }
+
+  .family {
+    width: 104.5% !important;
+  }
+}
+
+@media screen and (min-width:698px) {
+  .family {
+    width: 100% !important;
+  }
 }
