--- a/public/assets/css/templates/responsive/base.css
+++ b/public/assets/css/templates/responsive/base.css
@@ -2,19 +2,34 @@
   div.main {
     width: 84% !important;
   }
+  .topbar {
+    display: none;
+  }
 }
 @media screen and (min-width: 455px) and (max-width: 697px) {
   div.main {
     width: 84% !important;
   }
+  .topbar {
+    display: none;
+  }
 }
 @media screen and (min-width: 698px) and (max-width: 769px) {
   div.main {
-    width: 84% !important;
+    width: 67% !important;
+  }
+  .topbar {
+    display: none;
   }
 }
 @media screen and (min-width: 770px) and (max-width: 1200px) {
+  div.account_box {
+    right: 117px;
+  }
   div.main {
-    width: 84% !important;
+    width: 100% !important;
+  }
+  .topbar {
+    display: none;
   }
 }
