--- a/public/assets/css/templates/responsive/family.css
+++ b/public/assets/css/templates/responsive/family.css
@@ -39,4 +39,12 @@
   .family .description {
     width: 100%;
   }
+  .family {
+    width: 104.5% !important;
+  }
+}
+@media screen and (min-width: 698px) {
+  .family {
+    width: 100% !important;
+  }
 }
