--- a/public/assets/css/templates/responsive/old_layout/css/menu.css
+++ b/public/assets/css/templates/responsive/old_layout/css/menu.css
@@ -5,6 +5,7 @@ ul.horizon_menu {
   list-style-type: none;
   padding: 0px;
   margin: 0px;
+  margin-bottom: 10px;
   width: 439px;
   height: 32px;
   overflow: hidden;
@@ -57,6 +58,7 @@ div.search_box {
   width: 242px;
   height: 30px;
   line-height: 29px;
+  margin-bottom: 29px;
   border-radius: 3px 3px 3px 3px;
   -moz-border-radius: 3px 3px 3px 3px;
   -webkit-border-radius: 3px 3px 3px 3px;
@@ -81,24 +83,23 @@ div.search_box input[type=submit] {
   text-indent: -9999px !important;
 }
 @media screen and (min-width: 800px) and (max-width: 1275px) {
-  div.search_box {
-    width: 100%;
-    float: none;
-    display: block;
-    margin-bottom: 20px;
-  }
   ul.horizon_menu {
-    margin: auto;
+    display: block;
+    margin: 0 auto;
+    margin-top: -30px !important;
   }
 }
 @media screen and (min-width: 401px) and (max-width: 799px) {
   .horizon_menu {
-    display: none;
+    margin-top: -51px !important;
   }
   div.search_box {
-    width: 100%;
+    width: 39%;
     float: none;
     display: block;
+    position: relative;
+    top: -59px;
+    left: 74%;
   }
 }
 @media screen and (min-width: 200px) and (max-width: 400px) {
