[remove_styles] fixing responsive layout at large screens

--- a/app/views/templates/responsive/assets/css/base.less
+++ b/app/views/templates/responsive/assets/css/base.less
@@ -39,10 +39,10 @@
 
 @media screen and (min-width:698px) and (max-width: 769px) {
    div.main  {
-    width: 67% !important;
+    width: 55% !important;
   }
 
-  .topbar {
+  div.topbar {
     display: none;
   }
 }
@@ -53,10 +53,6 @@
   }
 
    div.main  {
-    width: 100% !important;
-  }
-
-  .topbar {
-    display: none;
+    width: 67% !important;
   }
 }
