--- a/app/views/templates/responsive/assets/css/old_layout/css/menu.less
+++ b/app/views/templates/responsive/assets/css/old_layout/css/menu.less
@@ -82,19 +82,19 @@ div.search_box{
         margin: 0 auto;
         margin-top: -30px !important;
     }
+    div.search_box {
+        position: absolute;
+        top: 14px;
+        left: 70.4%;
+    }
 }
 
 @media screen and (min-width:401px) and (max-width: 799px) {
-    .horizon_menu {
-        margin-top: -51px !important;
-    }
-
     div.search_box {
         width: 39%;
         float: none;
         display:block;
         position: relative;
-        top: -59px;
         left: 74%;
     }
 }
