--- a/app/views/templates/base/assets/css/image-tagging.less
+++ b/app/views/templates/base/assets/css/image-tagging.less
@@ -31,7 +31,7 @@
     overflow: hidden;
 
     .tag{
-        opacity: 0;
+        opacity: 0.7;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -52,7 +52,8 @@
     &:hover{
         .tag{
             display: block;
-            opacity: 0.9;
+            opacity: 1;
+            background-color: rgba(255,255,255,1);
             .scale(1,1);
 
             &:hover{
@@ -91,5 +92,9 @@
     &.visible{
         opacity: 1;
         display: block;
+    }
+
+    img{
+        width: 100%;
     }
 }
