--- a/public/assets/css/templates/base/image-tagging.css
+++ b/public/assets/css/templates/base/image-tagging.css
@@ -4,7 +4,7 @@
   overflow: hidden;
 }
 .tagged-image .tag {
-  opacity: 0;
+  opacity: 0.7;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -28,7 +28,8 @@
 }
 .tagged-image:hover .tag {
   display: block;
-  opacity: 0.9;
+  opacity: 1;
+  background-color: #ffffff;
   transform: scale(1,1);
   -ms-transform: scale(1,1);
   -webkit-transform: scale(1,1);
@@ -69,4 +70,7 @@
 .tagged-product-popover.visible {
   opacity: 1;
   display: block;
+}
+.tagged-product-popover img {
+  width: 100%;
 }
