--- a/public/assets/css/templates/base/main.css
+++ b/public/assets/css/templates/base/main.css
@@ -294,6 +294,41 @@ div.main div.search_box input[type=submit] {
   width: 34px;
   text-indent: -9999px !important;
 }
+.base_price {
+  background: #FFE746;
+  color: #333332;
+  display: inline-block;
+  font-size: 19px;
+  font-weight: bold;
+  line-height: 23px;
+  margin: 5px 0 0 0;
+  white-space: nowrap;
+  border-radius: 4px 4px 4px 4px;
+  -moz-border-radius: 4px 4px 4px 4px;
+  -webkit-border-radius: 4px 4px 4px 4px;
+  padding: 2px 6px;
+}
+.base_price.crossed {
+  background: #EEE;
+  color: #8D8D8D;
+  display: inline-block;
+  font-size: 11px;
+  text-decoration: line-through;
+}
+.promotional_price {
+  background: #FFE746;
+  color: #F00;
+  display: inline-block;
+  font-size: 19px;
+  font-weight: bold;
+  line-height: 23px;
+  margin: 5px 0 0 0;
+  white-space: nowrap;
+  border-radius: 4px 4px 4px 4px;
+  -moz-border-radius: 4px 4px 4px 4px;
+  -webkit-border-radius: 4px 4px 4px 4px;
+  padding: 2px 6px;
+}
 .footer {
   font-size: 11px;
   clear: both;
