[facet-search] Actually display facets for a chave-de-entrada

--- a/app/views/templates/base/assets/css/main.less
+++ b/app/views/templates/base/assets/css/main.less
@@ -408,3 +408,35 @@ div.main{
     line-height: 35px;
     border-top: solid 1px #DDD;
 }
+
+/**
+ * Facets
+ */
+.facets-sidebar{
+    border: solid 1px #DDD;
+    margin-top: 20px;
+    margin-right: 19px;
+    .border-radius(4px);
+
+    h3{
+        display: block;
+        background-color: #DDD;
+        padding: 7px;
+
+        &:first-child{
+            margin-top: 0px;
+        }
+    }
+
+    a{
+        display: block;
+        width: 100%;
+        margin:0;
+        padding: 2px 10px;
+
+        small{
+            color: #000;
+            font-weight: bold;
+        }
+    }
+}
