[quicksearch] Quick quicksearch

--- a/app/views/templates/base/assets/css/main.less
+++ b/app/views/templates/base/assets/css/main.less
@@ -464,3 +464,20 @@ div.main{
         }
     }
 }
+
+/**
+ * Quicksearch
+ */
+
+.main-quicksearch{
+    position: absolute;
+    background-color: #FFF;
+    .border-radius(6px);
+    box-shadow: 1px 1px 10px rgba(0,0,0,0.5);
+    width: 600px;
+    height: 350px;
+    right: 0px;
+    top: 32px;
+    border: solid 3px rgb(169, 228, 17);
+    z-index: 9999;
+}
