--- a/public/assets/css/templates/base/main.css
+++ b/public/assets/css/templates/base/main.css
@@ -384,3 +384,17 @@ div.main div.search_box input[type=submit] {
   float: right;
   display: block;
 }
+.main-quicksearch {
+  position: absolute;
+  background-color: #FFF;
+  border-radius: 6px 6px 6px 6px;
+  -moz-border-radius: 6px 6px 6px 6px;
+  -webkit-border-radius: 6px 6px 6px 6px;
+  box-shadow: 1px 1px 10px rgba(0,0,0,0.5);
+  width: 600px;
+  height: 350px;
+  right: 0px;
+  top: 32px;
+  border: solid 3px #a9e411;
+  z-index: 9999;
+}
