[not-found-words] adding icon to video

--- a/app/views/templates/base/assets/css/main.less
+++ b/app/views/templates/base/assets/css/main.less
@@ -499,5 +499,13 @@ div.main{
         img {
             width: 10%;
         }
+
+        a {
+            vertical-align: top;
+        }
+
+        img.video-icon {
+            width: 35%;
+        }
     }
 }
